# found-in-space-pipeline

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: cursor_file_storage_terminology_consist.md  feed-downloads.md  mergers.md
src/foundinspace/pipeline/: __main__.py  cli.py  constants.py  paths.py  project.py  project_cli.py
src/foundinspace/pipeline/common/: coords.py  morton.py  photometry.py
src/foundinspace/pipeline/gaia/: astrometry.py  cli.py  photometry.py  pipeline.py
src/foundinspace/pipeline/gaia_to_hip/: cli.py  download.py  pipeline.py
src/foundinspace/pipeline/hipparcos/: astrometry.py  cli.py  download.py  photometry.py  pipeline.py
src/foundinspace/pipeline/identifiers/: __init__.py  cli.py  download.py  pipeline.py
src/foundinspace/pipeline/merge/: __init__.py  cli.py  pipeline.py
src/foundinspace/pipeline/overrides/: __init__.py  cli.py  loader.py  pipeline.py
src/foundinspace/pipeline/overrides/data/: __init__.py  alpha_cen.yaml  binaries.yaml  sun.yaml
tests/: test_project.py
tests/common/: test_coords.py
tests/gaia/: __init__.py  test_astrometry.py  test_photometry.py  test_pipeline.py
tests/gaia_to_hip/: test_cli.py  test_download.py  test_pipeline.py
tests/hipparcos/: test_pipeline.py
tests/identifiers/: test_pipeline.py
tests/merge/: test_pipeline.py
tests/overrides/: test_loader.py  test_overrides_prepare.py
